Upgrade Java runtime from 1.8 to 21 with necessary JAXB dependencies